update : clear screen & alert

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
      style="width: 90vw; height: 90vw; max-width: 600px; max-height: 600px;">
   </div>
 
+  <div class="mt-4 flex gap-4">
+    <button id="refreshBtn" class="border-2 border-black px-4 py-2 font-bold active:bg-black active:text-white">
+        Ekranı Temizle
+    </button>
+</div>
+
     <div id="info" class="mt-4 text-sm text-center px-4">
       Oyuncu ID: <span id="playerId" class="font-bold">...</span>
     </div>
