--- a/index.html
+++ b/index.html
@@ -202,14 +202,11 @@
                 title="Ekranı temizle">
             ⚡
         </button>
-        <span class="kindle-flash-label">
-            Ekranı Temizle
-        </span>
     </div>
 
     <button id="resignBtn"
             class="border-2 border-black px-3 py-1 font-bold text-xs kindle-exit-btn">
-        Çıkış 🏳️
+        Oyunu Terk Et
     </button>
 
 </div>
